k8s/multicloud-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aws
  labels:
    cloudcrafter/simulated-provider: aws
---
apiVersion: v1
kind: Namespace
metadata:
  name: google-cloud
  labels:
    cloudcrafter/simulated-provider: google-cloud
