k8s/events-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events
  namespace: cloudcrafter
  labels:
    app: events
spec:
  replicas: 2
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
        - name: events
          image: cloudcrafter/events:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 10
