k8s/notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  namespace: cloudcrafter
  labels:
    app: notifications
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
        - name: notifications
          image: cloudcrafter/notifications:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
          readinessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 5
            periodSeconds: 10
