k8s/events-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events
  namespace: cloudcrafter
spec:
  selector:
    app: events
  ports:
    - port: 80
      targetPort: 3002
  type: ClusterIP
