k8s/tickets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets
  namespace: cloudcrafter
spec:
  selector:
    app: tickets
  ports:
    - port: 80
      targetPort: 3003
  type: ClusterIP
