k8s/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: cloudcrafter
spec:
  selector:
    app: users
  ports:
    - port: 80
      targetPort: 3001
  type: ClusterIP
