k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcrafter-ingress
  namespace: cloudcrafter
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: cloudcrafter.local
      http:
        paths:
          - path: /users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users
                port:
                  number: 80
          - path: /events(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: events
                port:
                  number: 80
          - path: /tickets(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tickets
                port:
                  number: 80
          - path: /notifications(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notifications
                port:
                  number: 80
